--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -1,12 +1,8 @@
 [docks]
 
-dock_3="Scene,Import"
 dock_3_selected_tab_idx=0
-dock_4="FileSystem,History"
 dock_4_selected_tab_idx=0
-dock_5="Inspector,Signals,Groups"
 dock_5_selected_tab_idx=0
-dock_9="Output,Debugger,Audio,Animation,Shader Editor,Search Results,AnimationTree,ResourcePreloader,ShaderFile,SpriteFrames,Theme,Polygon,TileSet,TileMap,Replication,MSBuild,GridMap"
 dock_floating={}
 dock_closed=[]
 dock_split_2=0
@@ -15,6 +11,11 @@ dock_hsplit_1=0
 dock_hsplit_2=280
 dock_hsplit_3=-280
 dock_hsplit_4=0
+dock_9_selected_tab_idx=0
+dock_3="Scene,Import"
+dock_4="FileSystem,History"
+dock_5="Inspector,Signals,Groups"
+dock_9="Output,Debugger,Audio,Animation,Shader Editor,Search Results,AnimationTree,ResourcePreloader,ShaderFile,SpriteFrames,Theme,Polygon,TileSet,TileMap,Replication,MSBuild,GridMap"
 
 [docks/FileSystem]
 
@@ -23,8 +24,8 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://")
-uncollapsed_paths=PackedStringArray("Favorites", "res://")
+selected_paths=PackedStringArray("res://map/maps/map-parking-garage.tscn")
+uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://map/", "res://map/maps/")
 
 [docks/History]
 
@@ -33,10 +34,11 @@ include_global=true
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn")
-current_scene="res://main.tscn"
+open_scenes=PackedStringArray("res://main.tscn", "res://map/maps/map-parking-garage.tscn")
+current_scene="res://map/maps/map-parking-garage.tscn"
 bottom_panel_offsets={
-"Audio": -450
+"Audio": -450,
+"Output": 0
 }
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
@@ -58,8 +60,8 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 0, 0, 0)
-floating_window_screen=-1
+floating_window_rect=Rect2i(1220, 766, 980, 576)
+floating_window_screen=0
 
 [ShaderEditor]
 
